objects/FSL_Fault_Code__c.object
<CustomObject>
    <fields>
        <fullName>Algorithm_Description__c</fullName>
        <label>Algorithm Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDS_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cummins_Description__c</fullName>
        <label>Cummins Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cummins_Fault_Code__c</fullName>
        <label>Cummins Fault Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_SMN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL SMN</label>
        <referenceTo>FSL_SMN_DTC__c</referenceTo>
        <relationshipLabel>Cummins Fault Codes</relationshipLabel>
        <relationshipName>Cummins_Fault_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Overview__c</fullName>
        <label>Fault Code Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fault_Code_SMN__c</fullName>
        <externalId>true</externalId>
        <label>Fault Code SMN</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>J1939_FMI__c</fullName>
        <label>J1939 FMI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>J2012_PCode__c</fullName>
        <label>J2012 PCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp_Color__c</fullName>
        <label>Lamp Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp_Device__c</fullName>
        <label>Lamp Device</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageKey__c</fullName>
        <label>LanguageKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_in_CES_14602__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published in CES 14602</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cummins Fault Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fault_Code_SMN__c</columns>
        <columns>FSL_SMN__c</columns>
        <columns>J2012_PCode__c</columns>
        <columns>SPN__c</columns>
        <columns>J1939_FMI__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSL_SMN__c</field>
            <operation>equals</operation>
            <value>L9 CM2450 L126B</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cummins Fault Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cummins Fault Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>